--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+attrs==20.3.0
 Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
@@ -6,10 +7,13 @@ docutils==0.16
 flake8==3.9.1
 idna==2.10
 imagesize==1.2.0
+iniconfig==1.1.1
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pycodestyle==2.7.0
 pydocstyle==6.0.0
 pyflakes==2.3.1
@@ -18,6 +22,7 @@ pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
+pytest==6.2.3
 pytz==2021.1
 requests==2.25.1
 snowballstemmer==2.1.0
@@ -28,4 +33,5 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+toml==0.10.2
 urllib3==1.26.4
