--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,6 +4,7 @@ Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
 docutils==0.16
+EasyProcess==0.3
 flake8==3.9.1
 idna==2.10
 imagesize==1.2.0
@@ -23,7 +24,9 @@ PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
 pytest==6.2.3
+pytest-qt==3.3.0
 pytz==2021.1
+PyVirtualDisplay==2.1
 requests==2.25.1
 snowballstemmer==2.1.0
 Sphinx==3.5.4
