--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install xvfb and xcb
+      run: |
+        sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0
+        sudo apt-get install -y libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install wheel
         if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+    - name: Install dl_markup 
+      run: |
         pip install .
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # stop the build if there are any flake8 errors/warnings
+        flake8 . --count --statistics
+    - name: test with pytest
+      run: |
+        xvfb-run -a pytest .
