--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
       run: |
         # stop the build if there are any flake8 errors/warnings
         flake8 . --count --statistics
+    - name: Run pydocstyle
+      run: |
+        # stop the build if there are any flake8 errors/warnings
+        pydocstyle dl_markup --count
     - name: test with pytest
       run: |
         xvfb-run -a pytest .
