--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,19 +1,19 @@
-flake8==3.9.1
-pycodestyle==2.7.0
-pydocstyle==6.0.0
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.8.1
-pytest==6.2.3
-pytest-qt==3.3.0
-Sphinx==3.5.4
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinx-toolbox==2.12.0
-pytest-cov==2.12.1
+flake8
+pycodestyle
+pydocstyle
+PyQt5
+PyQt5-Qt5
+PyQt5-sip
+pytest
+pytest-qt
+Sphinx
+sphinx-rtd-theme
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+sphinx-toolbox
+pytest-cov
 build
